--- a/bridge/package.json
+++ b/bridge/package.json
@@ -9,7 +9,9 @@
     "dev": "node --watch src/server.js"
   },
   "dependencies": {
-    "better-sqlite3": "^11.6.0",
     "express": "^4.19.2"
+  },
+  "optionalDependencies": {
+    "better-sqlite3": "^11.6.0"
   }
 }
