--- a/bridge/package.json
+++ b/bridge/package.json
@@ -6,10 +6,12 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "node --watch src/server.js"
+    "dev": "node --watch src/server.js",
+    "test": "node --test"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "fflate": "^0.8.2"
   },
   "optionalDependencies": {
     "better-sqlite3": "^11.6.0"
